Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35598

foreign key error is unnecessary truncated

    XMLWordPrintable

Details

    Description

      The error message I'm getting when executing a query:

      ERROR 1451 (23000) at line 2: Cannot delete or update a parent row: a foreign key constraint fails
      (`adex_sales_smtm_yourspace_api`.`conemu_conemu_file`, CONSTRAINT `fk_conemu_conemu_file_root_conemu_conemu_file_key_id`
      FOREIGN KEY (`root_conemu_conemu_file_key_id`) REFERENCES `conemu_conemu)
      

      Part of the error message is truncated. Is there a way to disable this behavior?

      Attachments

        Activity

          People

            serg Sergei Golubchik
            savemetenminutes Milen
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: