MDEV-35598 foreign key error is unnecessary truncated

truncate it at 512 bytes, not 192